<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add_shortcut"
        android:icon="@drawable/ic_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        android:icon="@android:drawable/ic_menu_upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_selected"
        android:title="@string/action_delete_selected"
        android:icon="@android:drawable/ic_menu_delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
